--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   </button>
 </div>
 <div id="money" class="score"></div>
-<div id="foundDiamond" class="score"></div>
+<div id="found-diamond" class="score"></div>
 <div id="finish-time" class="score"></div>
 
 
@@ -463,7 +463,7 @@
     var moneyElement = document.querySelector("#money");
     moneyElement.textContent = "PENGAR: " + money.toString();
     if (foundDiamond){
-      var foundDiamondElement = document.querySelector("#diamond-found");
+      var foundDiamondElement = document.querySelector("#found-diamond");
       foundDiamondElement.textContent = "Du hittade diamanten!";
     }
     
