--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
         var timeInSeconds = finishTime / 1000;
         var seconds = Math.floor(timeInSeconds % 60);
         var minutes = Math.floor(seconds / 60);
-        showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!")
-        finishGameSound.play();
-        gameState = GAME_FINISHED;
-        updateGameState();
-        saveState();
-        
+        showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!", function() {
+          finishGameSound.play();
+          gameState = GAME_FINISHED;
+          updateGameState();
+          saveState();
+        });
 
       }
       else {
@@ -373,27 +373,31 @@
       var shufffledLoc = shuffledLocations[location];
       var encounter = encounters[shufffledLoc];
       if (encounter == "coins") {
-        showModal("Du hittade 1000 kronor!");
-        money += 1000;
-        colorBlock.style.backgroundImage = coinsImage;
-        coinsSound.play()
+        showModal("Du hittade 1000 kronor!", function() {
+          money += 1000;
+          colorBlock.style.backgroundImage = coinsImage;
+          coinsSound.play();
+        });
       }
       else if (encounter == "diamond") {
-        showModal("Du hittade diamanten! Skynda dig tillbaka till start!");
+        showModal("Du hittade diamanten! Skynda dig tillbaka till start!", function() {
           money += 10000;
           foundDiamond = true;
           colorBlock.style.backgroundImage = diamondImage;
-          diamondSound.play()
+          diamondSound.play();
+        });
       }
       else if (encounter == "bandit") {
-        showModal("Ånej! En bandit stal alla dina pengar!");
+        showModal("Ånej! En bandit stal alla dina pengar!", function() {
         money = 0;
         colorBlock.style.backgroundImage = banditImage;
         banditSound.play();
+       });
       }
       else {
-        showModal("Det var ingenting här... :(");
+        showModal("Det var ingenting här... :(", function() {
         errorSound.play();
+        });
       }
       visitedLocations.push(location);
      //updateGameState();
