--- a/index.html
+++ b/index.html
@@ -344,66 +344,66 @@
     }
   }
 
-    function handleStartScanned() {
-      if (gameState == GAME_IN_PROGRESS) {
-        finishTime =  new Date().getTime() - startTime;
-        var timeInSeconds = finishTime / 1000;
-        var seconds = Math.floor(timeInSeconds % 60);
-        var minutes = Math.floor(seconds / 60);
-        showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!", function() {
-          finishGameSound.play();
-          gameState = GAME_FINISHED;
-          updateGameState();
-          saveState();
-        });
+  function handleStartScanned() {
+    if (gameState == GAME_IN_PROGRESS) {
+      finishTime =  new Date().getTime() - startTime;
+      var timeInSeconds = finishTime / 1000;
+      var seconds = Math.floor(timeInSeconds % 60);
+      var minutes = Math.floor(seconds / 60);
+      showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!", function() {
+        finishGameSound.play();
+        gameState = GAME_FINISHED;
+        updateGameState();
+        saveState();
+      });
 
-      }
-      else {
-        showModal("Tryck på OK för att starta ett nytt spel.", function () {
-          resetGame();
-          gameState = GAME_IN_PROGRESS;
-          startTime = new Date().getTime();
-          saveState();
-          whistleSound.play();
-        });
-      }
     }
+    else {
+      showModal("Tryck på OK för att starta ett nytt spel.", function () {
+        resetGame();
+        gameState = GAME_IN_PROGRESS;
+        startTime = new Date().getTime();
+        saveState();
+        whistleSound.play();
+      });
+    }
+  }
 
-    function handleEncounter(location) {
-      var shufffledLoc = shuffledLocations[location];
-      var encounter = encounters[shufffledLoc];
-      if (encounter == "coins") {
-        showModal("Du hittade 1000 kronor!", function() {
-          money += 1000;
-          colorBlock.style.backgroundImage = coinsImage;
-          coinsSound.play();
-        });
-      }
-      else if (encounter == "diamond") {
-        showModal("Du hittade diamanten! Skynda dig tillbaka till start!", function() {
-          money += 10000;
-          foundDiamond = true;
-          colorBlock.style.backgroundImage = diamondImage;
-          diamondSound.play();
-        });
-      }
-      else if (encounter == "bandit") {
-        showModal("Ånej! En bandit stal alla dina pengar!", function() {
-        money = 0;
-        colorBlock.style.backgroundImage = banditImage;
-        banditSound.play();
-       });
-      }
-      else {
-        showModal("Det var ingenting här... :(", function() {
-        errorSound.play();
-        });
-      }
-      visitedLocations.push(location);
-     //updateGameState();
-      saveState();
-      updateScore();
+  function handleEncounter(location) {
+    var shufffledLoc = shuffledLocations[location];
+    var encounter = encounters[shufffledLoc];
+    if (encounter == "coins") {
+      showModal("Du hittade 1000 kronor!", function() {
+        money += 1000;
+        colorBlock.style.backgroundImage = coinsImage;
+        coinsSound.play();
+      });
     }
+    else if (encounter == "diamond") {
+      showModal("Du hittade diamanten!! Skynda dig tillbaka till start!", function() {
+        money += 10000;
+        foundDiamond = true;
+        colorBlock.style.backgroundImage = diamondImage;
+        diamondSound.play();
+      });
+    }
+    else if (encounter == "bandit") {
+      showModal("Ånej! En bandit stal en massa pengar!", function() {
+      money = Math.max(money-3000, 0);
+      colorBlock.style.backgroundImage = banditImage;
+      banditSound.play();
+      });
+    }
+    else {
+      showModal("Det var ingenting här... :(", function() {
+      errorSound.play();
+      });
+    }
+    visitedLocations.push(location);
+    //updateGameState();
+    saveState();
+    updateScore();
+  }
 
  
 
@@ -485,8 +485,10 @@
   }
 
   function updateScore() {
+
     var moneyElement = document.querySelector("#money");
     moneyElement.textContent = "PENGAR: " + money.toString();
+
     var foundDiamondElement = document.querySelector("#found-diamond");
     if (foundDiamond){
       foundDiamondElement.textContent = "Du hittade diamanten!";
