Many changes. 3 bandits, 20 qr-codes and other changes

--- a/index.html
+++ b/index.html
@@ -285,7 +285,11 @@
   //   scanner.stop();
   // })
   var colors = ["red", "green", "blue"];
-  var encounters = ["bandit", "diamond", "coins", "coins", "coins", "coins", "coins"];
+  var encounters = ["bandit", "bandit", "bandit", "diamond",
+                   "coins", "coins", "coins", "coins",
+                   "coins", "coins", "coins", "coins",
+                   "coins", "coins", "coins", "coins",
+                   "coins", "coins", "coins", "coins" ];
 
   var shuffledLocations = [];
   var visitedLocations = [];
