--- a/make_qr.html
+++ b/make_qr.html
@@ -139,7 +139,7 @@ function rgbToHex(r, g, b) {
 
   createQrElement(null, "#000000", "Start");
 
-  for (var i= 1; i<= 20;i++){
-     createQrElement(i.toString(), randomWebColor());
+  for (var i= 0; i< 20;i++){
+     createQrElement(i.toString(), randomWebColor(), (i+1).toString());
     }
 </script>
