--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     setTimeout(() => {
       setScannerState(false); // Hide scanner after action is finished (e.g., 2 seconds delay)
       var location = urlParams.get("location");
-      if (location === null) {
+      if (location === null || location === "start") {
         handleStartScanned();
       }
       else if (visitedLocations.indexOf(location) !== -1) {
@@ -396,7 +396,30 @@
     }, scanHideShowDelay);
   }
 
+  function handleStartScanned() {
+    if (gameState == GAME_IN_PROGRESS) {
+      finishTime =  new Date().getTime() - startTime;
+      var timeInSeconds = finishTime / 1000;
+      var seconds = Math.floor(timeInSeconds % 60);
+      var minutes = Math.floor(seconds / 60);
+      showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!", function() {
+        finishGameSound.play();
+        gameState = GAME_FINISHED;
+        updateGameState();
+        saveState();
+      });
 
+    }
+    else {
+      showModal("Tryck på OK för att starta ett nytt spel.", function () {
+        resetGame();
+        gameState = GAME_IN_PROGRESS;
+        startTime = new Date().getTime();
+        saveState();
+        whistleSound.play();
+      });
+    }
+  }
 
 // Modify the handleEncounter function to add a bandit marker instead of losing money
   function handleEncounterBing(location) {
@@ -492,30 +515,7 @@
     }
 
  
-  function handleStartScanned() {
-    if (gameState == GAME_IN_PROGRESS) {
-      finishTime =  new Date().getTime() - startTime;
-      var timeInSeconds = finishTime / 1000;
-      var seconds = Math.floor(timeInSeconds % 60);
-      var minutes = Math.floor(seconds / 60);
-      showModal("Du blev klar på " + minutes + " min och " + seconds + " sek!", function() {
-        finishGameSound.play();
-        gameState = GAME_FINISHED;
-        updateGameState();
-        saveState();
-      });
 
-    }
-    else {
-      showModal("Tryck på OK för att starta ett nytt spel.", function () {
-        resetGame();
-        gameState = GAME_IN_PROGRESS;
-        startTime = new Date().getTime();
-        saveState();
-        whistleSound.play();
-      });
-    }
-  }
 
   function handleEncounter(location) {
     var shufffledLoc = shuffledLocations[location];
