made qrcode.js a local file

--- a/index.html
+++ b/index.html
@@ -755,4 +755,4 @@ function startNewGame(locationList){
 
 </script>
 
-<script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
+<script src="qrcode.min.js"></script>
