--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
       border-radius: 10px;
       border: none;
       width: 80%;
-      height: auto;
+      height: 75%;
+      display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
       box-shadow: 0px 0px 10px #000000b3;
       animation-name: modalopen;
       animation-duration: 1s
@@ -113,7 +117,8 @@
 
     .modal-content p {
       font-size: 24px;
-      text-align: center
+      text-align: center;
+
     }
 
     .modal-content button {
@@ -130,9 +135,13 @@
     }
 
     .modal-button {
-      display: block;
-      margin: 0 auto;
-      width: 50%;
+      padding: 20px 40px; /* Vertical padding 20px, Horizontal padding 40px */
+  width: 90%; 
+  height: 40%; /* Adjust as needed */
+  font-size: 60px; 
+  display: flex;  /* Use flexbox to center text */
+  align-items: center; /* Center text vertically */
+  justify-content: center; /* Center text horizontally */
     }
 
     .scan-button {
