--- a/index.html
+++ b/index.html
@@ -81,25 +81,24 @@
       /* Enable scroll if needed */
       background-color: #000000;
       /* Fallback color */
-      background-color: rgba(0, 0, 0, 0.4);
-      /* Black w/ opacity */
+
     }
 
     /* Modal Content/Box */
     .modal-content {
       background-color: #fefefe;
-      margin: auto;
+      margin: 10% auto;
       /* 15% from the top and centered */
       padding-top: 20px;
       padding-bottom: 20px;
       border-radius: 10px;
-      border: none;
+      border: 6px dashed #a72009;
       width: 80%;
       height: 75%;
       display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
       box-shadow: 0px 0px 10px #000000b3;
       animation-name: modalopen;
       animation-duration: 1s
@@ -117,9 +116,8 @@
     }
 
     .modal-content p {
-      font-size: 24px;
-      text-align: center;
-
+      font-size: 48px;  /* Adjusted font size */
+  text-align: center;
     }
 
     .modal-content button {
