--- a/index.html
+++ b/index.html
@@ -116,8 +116,13 @@
     }
 
     .modal-content p {
-      font-size: 48px;  /* Adjusted font size */
-  text-align: center;
+      font-size: 36px;  /* Adjusted font size */
+      text-align: center;
+      padding-top: 0px;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-top: 5px;
+      margin-bottom: 5px;
     }
 
     .modal-content button {
