--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@
       background-size: contain;
       background-repeat: no-repeat;
     }
+
+    .treasure-image{
+      border: 4px solid #252525;
+      width: 80%;
+      margin: 5% auto;
+      border-radius: 10px;
+      background-color: #f2f2f2;
+    }
   </style>
 </head>
 
