--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 </head>
 
 <body>
-  <h1>Försvunna Diamanten</h1>
+  <h1>Försvunna Diamanten v0.1</h1>
 
   <div id="video-container" class="hidden">
     <video id="qr-video" class="video-feed"></video>
@@ -277,7 +277,7 @@
 
   <div id="qrcode-container"></div>
 
-  <script type="module" src="QR-ai.js"></script>
+  <script type="module" src="QR-ai.js?v=0.1"></script>
   <script src="qrcode.min.js"></script>
 </body>
 
