--- a/index.html
+++ b/index.html
@@ -116,13 +116,19 @@
     }
 
     .modal-content p {
-      font-size: 36px;  /* Adjusted font size */
       text-align: center;
       padding-top: 0px;
       padding-left: 20px;
       padding-right: 20px;
       margin-top: 5px;
       margin-bottom: 5px;
+    }
+    .modal-content p.large {
+      font-size: 10vw;
+    }
+
+    .modal-content p.small {
+      font-size: 6vw;
     }
 
     .modal-content button {
@@ -139,13 +145,16 @@
     }
 
     .modal-button {
-      padding: 20px 40px; /* Vertical padding 20px, Horizontal padding 40px */
-  width: 90%; 
-  height: 40%; /* Adjust as needed */
-  font-size: 60px; 
-  display: flex;  /* Use flexbox to center text */
-  align-items: center; /* Center text vertically */
-  justify-content: center; /* Center text horizontally */
+    width: 65vw;
+    height: 20vh;
+    font-size: 12vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .qr-code {
+      width: 50vmin;
     }
 
     .scan-button {
