--- a/index.html
+++ b/index.html
@@ -251,11 +251,9 @@
     }
 
     .treasure-image{
-      border: 4px solid #252525;
-      width: 80%;
-      margin: 5% auto;
-      border-radius: 10px;
+      width: 35vh;
       background-color: #f2f2f2;
+}
     }
   </style>
 </head>
