test hiding scroll bars

--- a/html_frame_test.html
+++ b/html_frame_test.html
@@ -14,6 +14,7 @@
     align-items: center;
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
+    overflow: hidden;
   }
 
   .header {
@@ -32,6 +33,7 @@
     box-shadow: 0 0 10px #000;
     width: 80vw; /* Increase the width to use more space */
     margin: 2vh 0; /* Adjust spacing */
+    overflow: hidden;
   }
 
   .top-gem {
@@ -45,6 +47,7 @@
     grid-template-columns: repeat(5, 1fr); /* 5 columns for gems */
     grid-gap: 1vw;
     padding: 1vh;
+    overflow: hidden;
   }
 
   .gem-slot {
