--- a/html_frame_test.html
+++ b/html_frame_test.html
@@ -31,7 +31,7 @@
     border: 10px solid #8B4513;
     padding: 1vh;
     box-shadow: 0 0 10px #000;
-    width: 80vw; /* Increase the width to use more space */
+    width: 75vw; /* Increase the width to use more space */
     margin: 2vh 0; /* Adjust spacing */
     overflow: hidden;
   }
@@ -58,6 +58,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    height: 8vh;
 }
   .bandit-row {
     display: flex;
