--- a/html_frame_test.html
+++ b/html_frame_test.html
@@ -48,6 +48,16 @@
       margin: 10px 0;
       /* Adjust top and bottom margin */
       overflow: hidden;
+      display:flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .game-container{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* Distribute space among children */
+      height: 100%; /* Fill the height of the frame */
     }
 
     .top-gem {
@@ -56,6 +66,8 @@
 
       margin: 0 auto;
       display: block;
+      height: 20%;
+      width:auto;
     }
 
     .grid {
@@ -65,6 +77,7 @@
       grid-gap: 1vw;
       padding: 1vh;
       overflow: hidden;
+      flex-grow: 1;
     }
 
     .gem-slot {
@@ -82,6 +95,7 @@
       display: flex;
       justify-content: space-around;
       margin-top: 2vh;
+      height: 20%;
     }
 
     .bandit {
@@ -113,6 +127,11 @@
       /* Decrease the maximum size */
       max-height: 150px;
       border: none;
+    }
+
+    .scan-button.active{
+      background: url('qr-code-scan-icon-active.png') no-repeat center center;
+      background-size: contain;
     }
 
 
@@ -148,7 +167,7 @@
     <div id="video-container" class="video-container-flex hidden">
       <video id="qr-video" class="video-feed"></video>
     </div>
-    <div id="game-container">
+    <div id="game-container" class="game-container">
       <img src="diamond.png" alt="Large Top Gem" class="top-gem">
       <div class="grid">
         <!-- 5x4 grid of random gems -->
@@ -300,7 +319,7 @@
   // QR Scanner
   const scanner = new QrScanner(video, result => handleScanResult(result), {
     onDecodeError: error => console.log(error),
-    highlightScanRegion: true,
+    highlightScanRegion: false,
     highlightCodeOutline: true,
   });
   scanner.setCamera("environment");
