--- a/html_frame_test.html
+++ b/html_frame_test.html
@@ -41,9 +41,9 @@
       border: 10px solid #8B4513;
       padding: 1vh;
       box-shadow: 0 0 10px #000;
-      width: 85vw;
+      width: 80vw;
       /* Adjusted to 85% of viewport width */
-      height: 75vh;
+      height: 65vh;
       /* Adjusted to 75% of viewport height */
       margin: 10px 0;
       /* Adjust top and bottom margin */
@@ -51,6 +51,7 @@
       display:flex;
       flex-direction: column;
       justify-content: space-between;
+      max-width: 400px;
     }
 
     .game-container{
