--- a/html_frame_test.html
+++ b/html_frame_test.html
@@ -21,7 +21,7 @@
       background-image: url('jungle_background2.png');
       background-size: cover;
       background-repeat: no-repeat;
-      padding: 10px;
+
       /* Space around the edges */
     }
 
@@ -35,6 +35,103 @@
       /* Adjust top and bottom margin */
     }
 
+    .modal {
+      position: fixed;
+      /* Stay in place */
+      z-index: 1;
+      /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: auto;
+      /* Enable scroll if needed */
+      background-color: #000000;
+      /* Fallback color */
+
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #fefefe;
+      margin: 10% auto;
+      /* 15% from the top and centered */
+      padding-top: 20px;
+      padding-bottom: 20px;
+      border-radius: 10px;
+      border: 6px dashed #a72009;
+      width: 80%;
+      height: 80%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0px 0px 10px #000000b3;
+      animation-name: modalopen;
+      animation-duration: 1s
+    }
+
+    /* Add Animation */
+    @keyframes modalopen {
+      from {
+        opacity: 0
+      }
+
+      to {
+        opacity: 1
+      }
+    }
+
+
+
+    .modal-content p {
+      text-align: center;
+      padding-top: 0px;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
+
+    .modal-content p.large {
+      /* height: 15%; */
+      font-size: 8vmin;
+    }
+
+    .modal-content p.small {
+      /* height: 15%; */
+      font-size: 6vmin;
+    }
+
+    .modal-content-center-element {
+      height: 50%;
+      padding-top: 3vh;
+    }
+
+    .modal-content button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 1vh;
+      margin-bottom: 1vh;
+    }
+
+    .modal-content button:hover {
+      cursor: pointer
+    }
+
+    .modal-button {
+      width: 60%;
+      height: 20%;
+      font-size: 12vmin;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
     .frame {
       background-color: #301708;
       border-radius: 15px;
@@ -42,13 +139,13 @@
       padding: 1vh;
       box-shadow: 0 0 10px #000;
       width: 80vw;
-      height: 50vh;
+      height: 60vh;
       margin: 10px 0;
       overflow: hidden;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      max-width: 320px;
+      max-width: 300px;
     }
 
     .game-container {
@@ -126,6 +223,7 @@
       /* Decrease the maximum size */
       max-height: 150px;
       border: none;
+      margin-bottom:2vh;
     }
 
     .scan-button.active {
