--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
     }
 
     .header {
-      /* background-image: url('banner.png');
+      text-shadow: 0px 0px 6px rgb(255 144 0);
+      background-image: url(banner.png);
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center; */
+      background-position: center;
       text-align: center;
-      color: #ffdd00;
-      /* min-width: 90vw;
-      min-height: 10vh; */
-      /* White text color */
-      font-size: 9vw;
-      /* Responsive font size based on viewport width */
-      margin: 10px 0;
-      /* Adjust top and bottom margin */
+      color: #420022;
+      min-width: 80vw;
+      min-height: 10vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 10vw;
+      margin-top: 10px;
+      outline: 4px solid #301010;
+      border-radius: 8px;
     }
 
     .modal {
