--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     .header {
       text-shadow: 0px 0px 6px rgb(255 144 0);
-      background-image: url(banner.png);
+      background-image: url(banner2.png);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
